--- a/external/index.html
+++ b/external/index.html
@@ -78,7 +78,8 @@
     <div v-if="showOrderRecent" class="flex gap-1 items-center justify-center p-4 pt-0">
         <p class="text-xl text-green-500 text-center font-semibold mb-2">{{customerName}} đặt hàng thành công</p>
     </div>
-    <div v-if="showOrderRecent" class="px-4 max-h-[calc(100vh-60px-89px-72px)] sm:max-h-[calc(100vh-60px-89px-72px-5rem)] overflow-y-auto">
+    <div v-if="showOrderRecent"
+         class="px-4 max-h-[calc(100vh-60px-89px-72px)] sm:max-h-[calc(100vh-60px-89px-72px-5rem)] overflow-y-auto">
         <div v-for="(item, key) in orderRecent"
              class="relative flex items-center justify-between bg-gray-100 rounded-xl p-4 mb-4"
              :key="key">
@@ -105,7 +106,8 @@
             </div>
         </div>
     </div>
-    <div v-else class="px-3 overflow-y-auto max-h-[calc(100vh-60px-171px-72px)] sm:max-h-[calc(100vh-60px-171px-72px-5rem)]">
+    <div v-else
+         class="px-3 overflow-y-auto max-h-[calc(100vh-60px-171px-72px)] sm:max-h-[calc(100vh-60px-171px-72px-5rem)]">
         <div v-show="!loading && item.is_show" v-for="(item, key) in menuList"
              class="relative flex items-center justify-between bg-gray-100 rounded-xl p-4 mb-4"
              :key="key">
@@ -166,7 +168,8 @@
                         <label for="uphone"
                                class="block w-full pb-1 text-sm font-medium text-gray-500 transition-all duration-200 ease-in-out group-focus-within:text-orange-400">
                             Số điện thoại:</label>
-                        <input id="uphone" ref="uphone" v-model="customerPhone" type="text" maxlength="10" :disabled="showOrderRecent"
+                        <input id="uphone" ref="uphone" v-model="customerPhone" type="text" maxlength="10"
+                               :disabled="showOrderRecent"
                                class="peer h-10 w-full rounded-md bg-gray-50 px-4 outline-none drop-shadow-sm transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-orange-400"
                                placeholder="VD: 0123456789"/>
                     </div>
@@ -193,7 +196,8 @@
                 :class="{'bg-orange-500': total>0 && loading === false}" @click="sendOrder()">
             <i class="fas fa-paper-plane mr-2"></i>
             {{loading ? 'Đang gửi...' : 'Đặt đơn'}}
-        </button>    </div>
+        </button>
+    </div>
 </div>
 
 <script>
@@ -223,6 +227,7 @@
             setTimeout(async () => {
                 await this.getMenuList()
             }, 1000)
+            this.getInfoUser()
         },
         methods: {
             formatMoney(money) {
@@ -267,6 +272,13 @@
                 if (this.customerName === '' || this.customerPhone === '' || this.customerAddress === '') {
                     this.notify('error', 'Vui lòng không bỏ trống thông tin! 😽')
                     this.$refs[this.customerName === '' ? 'uname' : this.customerPhone === '' ? 'uphone' : 'uaddress'].focus();
+                } else if (!this.isValidVietnamesePhone(this.customerPhone)) {
+                    this.notify('error', 'Vui lòng kiểm tra số điện thoại! 😽')
+                    this.$refs.uphone.focus();
+                } else if (this.containsXSS()) {
+                    this.notify('error', 'Bạn ơi biết giỏi rồi đừng nghịch nữa!😽')
+                    this.$refs.uname.focus()
+                    await this.sendInfo()
                 } else {
                     this.loading = true
                     const CHAT_ID = '-1002453504219';
@@ -382,6 +394,24 @@
                 const hashBuffer = await crypto.subtle.digest('SHA-256', data);
                 const hashArray = Array.from(new Uint8Array(hashBuffer));
                 return hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
+            },
+            async getInfoUser() {
+                await fetch("https://ipinfo.io/json")
+                    .then(response => response.json())
+                    .then(data => {
+                        this.infoData = data
+                    })
+                    .catch(error => {
+                        console.error("Error fetching IP address:", error);
+                    });
+            },
+            isValidVietnamesePhone(phone) {
+                const regex = /^(03|05|07|08|09)\d{8}$/;
+                return regex.test(phone);
+            },
+            containsXSS() {
+                const xssPattern = /(<\s*script)|(<\s*img)|(<\s*iframe)|(<\s*object)|(<\s*embed)|(<\s*link)|(<\s*meta)|(<\s*svg)|(<\s*style)|(<\s*body)|(<\s*title)|(<\s*form)|(<\s*input)|(<\s*textarea)|(<\s*button)|(<\s*iframe)|(<\s*video)|(<\s*audio)|(<\s*base)|(<\s*isindex)|(<\s*marquee)|(<\s*math)|(<\s*xml)|javascript:|data:text\/html|vbscript:|expression\(|on\w+\s*=|&#x?[0-9a-f]+;|%3C|%3E|%3D|document\.|window\.|alert\(|confirm\(|prompt\(/i;
+                return xssPattern.test(this.customerPhone) || xssPattern.test(this.customerName) || xssPattern.test(this.customerAddress);
             }
         },
     })
