Hide button 0 percent when only stock on whdepot ưhonlint

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     disableCombo: [],
                 },
                 customerPhone: '',
-                customerAddress: ''
+                customerAddress: 'CellphoneS'
             }
         },
         watch: {
